--- a/src/components/pokemoncard.css
+++ b/src/components/pokemoncard.css
@@ -1,9 +1,10 @@
 .container {
   background-color: white;
   border-radius: 10px;
-  width: 50%;
+  width: 100%;
   display: flex;
   align-items: center;
+  margin-top:20px;
 }
 
 .pokemon-image {
